# TuringFlow

./: Cargo.toml  README.md
config/: pulse-default.yaml  test.yaml
examples/: example.txt
python/: example_langchain.py  example_langchain_embeddings.py  example_langchain_image.py  example_langchain_toolcalling.py
src/: cli.rs  config.rs  lib.rs  main.rs
src/commands/: calc.rs  embeddings.rs  image.rs  mod.rs
src/pulse/: app.rs  layout.rs  mod.rs  theme.rs  widget.rs
src/rchain/: ai.rs  chat_models.rs  embeddings.rs  human.rs  mod.rs  tools.rs
tests/: image_flow.rs  pulse_base.rs  text_flow.rs
